Closed Bug 1494124 Opened 6 years ago Closed 6 years ago

Large spike in GetWindowDraggingRegion hangs on Sept. 5th

Categories

(Core :: Web Painting, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla64
Performance Impact ?
Tracking Status
firefox-esr60 --- unaffected
firefox62 --- unaffected
firefox63 --- unaffected
firefox64 --- fixed

People

(Reporter: alexical, Assigned: mikokm)

References

Details

(Keywords: regression)

Attachments

(1 file)

This represents a substantial (~11%) increase in overall Main Thread hangs. See here: https://arewesmoothyet.com/?category=all&durationSpec=128_512_test&mode=explore&payloadID=34f51bbb1d2d4e9badb9c8a40351af91&search=GetWindowDraggingRegion&thread=2 And the corresponding spike in the tracker view here: https://arewesmoothyet.com/?mode=track&trackedStat=All%20Hangs (Check "Show seven-day average" or uncheck all the categories other than "paint")
Whiteboard: [qf]
This is very likely caused by bug 1413546 that enabled retained display lists for parent process. Managing the window dragging region with retained display list is more complicated, because we need to be able to remove frames that contributed to the region in case the frames are modified or removed, instead of just keeping one region around[1]. This might be the culprit behind bug 1489184. Awesome catch Doug! [1]: https://searchfox.org/mozilla-central/rev/881a3c5664ede5e08ee986d76433bc5c4b5680e6/layout/painting/nsDisplayList.cpp#2016
Blocks: 1413546
Per Matt Woodrow in IRC: a likely culprit is mRetainedWindowDraggingRegion (+mRetainedWindowNoDraggingRegion?) accumulating values on each display list build without being cleared.
Assignee: nobody → mikokm
Status: NEW → ASSIGNED
Which versions have/are been impacted?
(In reply to Sylvestre Ledru [:sylvestre] from comment #4) > Which versions have/are been impacted? This pref (layout.display-list.retain.chrome) is only enabled on 64.
Priority: -- → P1
Comment on attachment 9013348 [details] Bug 1494124 - Allow only one rect per frame in WeakFrameRegion Matt Woodrow (:mattwoodrow) has approved the revision.
Attachment #9013348 - Flags: review+
Pushed by mikokm@gmail.com: https://hg.mozilla.org/integration/autoland/rev/260007b95d67 Allow only one rect per frame in WeakFrameRegion r=mattwoodrow
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla64
Depends on: 1496491
Performance Impact: --- → ?
Whiteboard: [qf]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: