Bug 1494124 - Allow only one rect per frame in WeakFrameRegion r=mattwoodrow

Differential Revision: https://phabricator.services.mozilla.com/D7303

--HG--
extra : moz-landing-system : lando